feat: use password hash fix: fixed parsing pt-BR